# euispice_coreg

./: .gitignore  LICENCE  README.md  pyproject.toml
euispice_coreg/: __init__.py
euispice_coreg/hdrshift/: AlignmentResults.py  __init__.py  alignement.py  alignement_spice.py  alignment.py  alignment_spice.py  alignment_spice_selector.py
euispice_coreg/hdrshift/test/: test.fits  test_AlignmentResults.py  test_alignment.py  test_alignment_spice.py  test_alignment_spice_sunpy.py  test_alignment_sunpy.py
euispice_coreg/hdrshift/test/fitsfiles/: AIA_193_eis_20221024_024912_fe_12_195_119_calib_intensity.fits  eis_20221024_024912_fe_12_195_119_calib_intensity.fits  solo_L2_eui-fsi174-image_20220317T095045281_V01.fits  solo_L2_eui-fsi304-image_20220317T000800208_V02.fits  solo_L2_eui-hrieuv174-image_20220317T095045277_V01.fits  solo_L2_spice-n-ras_20220317T000032_V02_100663831-000.fits
euispice_coreg/jitter_correction/: __init__.py  jitter_correction.py  jitter_correction_imager.py
euispice_coreg/plot/: __init__.py  perso.mplstyle  plot.py
euispice_coreg/plot/test/: test_plot.py
euispice_coreg/pxlshift/: alignment_pixels.py  alignment_spice_pixel.py  c_correlate.py
euispice_coreg/pxlshift/test/: test_alignment_pixels.py
euispice_coreg/selector/: selector.py  selector_eui.py  selector_spice.py
euispice_coreg/selector/test/: test_selector_eui.py
euispice_coreg/slimane_funcs/: utils.py
euispice_coreg/synras/: __init__.py  map_builder.py
euispice_coreg/synras/test/: test_map_builder.py
euispice_coreg/synras/test/fitsfiles/: solo_L2_eui-fsi304-image_20220317T000300228_V02.fits  solo_L2_eui-fsi304-image_20220317T001600209_V02.fits  test_map_builder_ref.fits
euispice_coreg/utils/: Util.py  c_correlate.py  matrix_transform.py  rectify.py
