[tool.poetry]
name = "euispice-coreg"
version = "0.1.0"
description = ""
authors = ["adolliou <antoine.dolliou@universite-paris-saclay.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
tqdm = "^4.66.2"
astropy = "^6.0.1"
matplotlib = "^3.8.4"
opencv-python = "^4.9.0.80"
scipy = "^1.13.0"
pytest = "^8.1.1"
multiprocess = "^0.70.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
