[tool.poetry]
name = "euispice-coreg"
version = "0.2.0"
description = "Tools to co-register imagers (including HRI-EUV) and SPICE, on-bord Solar Orbiter. "
authors = ["adolliou <antoine.dolliou@universite-paris-saclay.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.0"
tqdm = "^4.66.2"
astropy = "^6.0.1"
matplotlib = "^3.8.4"
opencv-python = "^4.9.0.80"
scipy = "^1.13.0"
pytest = "^8.1.1"
multiprocess = "^0.70.15"
sunpy = "^5.1.2"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
